# zkflow

./: .gitignore  Cargo.toml  README.md  ZkLeanCompiler.lean  circuit_graph  lake-manifest.json  lakefile.lean  presentation.tex
ZkLeanCompiler/: AST.lean  AlgProp.lean  Basic.lean  Builder.lean  Compile.lean  CompileCorrect.lean  Correctness.lean  Demo.lean  DemoMain.lean  IRExpr.lean  LCSemantics.lean  LCSyntax.lean  LookupTable.lean  Semantics.lean  Typing.lean  notes.txt
ZkLeanCompiler/Frontend/: CompileZkProgram.lean  Parsed.lean  compile_to_circuit.py  out.json  visualize_graph.py  zkparse.py
ZkLeanCompiler/Frontend/ZkLeanCompiler/Frontend/: Parsed.lean
ZkLeanCompiler/Frontend/examples/: arith.zk  arith_seq.zk  assert.zk  assert_eq.zk  complex.zk  if_arith.zk  if_false.zk  ifzcheck.zk  inset.zk  mul_self.zk  seq.zk  taut.zk  test.zk
ZkLeanCompiler/lean/: AST.lean  Basic.lean  Builder.lean  Compile.lean  CompileCorrect.lean  CompileProgramCorrect.lean  Correctness.lean  FreeMonad.lean  LCSemantics.lean  LCSyntax.lean  LookupTable.lean  Parse.lean  Pretty.lean  Program.lean  Semantics.lean
ZkLeanCompiler/rust/: Cargo.toml  main.rs
examples/: README.md  assert_then.zk  let_shadow.zk  long_seq.zk  mix_all.zk  nested_let.zk  nested_parens.zk  not_and_or.zk  precedence.zk  seq_asserts.zk  seq_bool.zk
