[package]
name = "zkprover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# stwo = { git = "https://github.com/starkware-libs/stwo.git", branch = "main" }

constraint_framework = { git = "https://github.com/starkware-libs/stwo.git", package = "constraint_framework", path = "crates/constraint_framework" }
