[package]
name = "zkprover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# stwo = { git = "https://github.com/starkware-libs/stwo.git", branch = "main" }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", package = "stwo-constraint-framework", rev = "d9ba68bb12ce4cb4e9c1f3a11a559285394094c2" }

[[bin]]
name = "zkprover"
path = "main.rs"
